* added a config property to control defaulting of primitive property when receiving null value from result (SPR-5588 backport)
* changed MapSqlParameterSource to SqlParameterSource in executeFunction and executeObject methods for SimpleJdbcCall (SPR-5570 backport)
* fixed toString handling for the TransactionAwareDataSourceProxy (SPR-5582 backport)

Package org.springframework.jms
* fixed JmsUtils.buildExceptionMessage to avoid potential NPE (SPR-5275)
* fixed JmsException/JmsUtils to fully avoid NPEs in case of cause messages being null
* JMS SingleConnectionFactory performs start call within connection monitor and only when not started already (SPR-5987 backport)
* fixed MessageListenerAdapter's "getSubscriptionName()" to work without delegate as well (SPR-5309 backport)
* refined logging in JMS SingleConnectionFactory and DefaultMessageListenerContainer
* handle "Class not found" error during deserialization (SPR-5880)

Package org.springframework.jmx
* MBeanClientInterceptor understands CompositeData/TabularData arrays (SPR-6548 backport) 

Package org.springframework.mail
* MimeMessageHelper encodes from, to, cc, bcc String addresses with given encoding as well (SPR-6530 backport)

Package org.springframework.orm
* AnnotationSessionFactoryBean now properly scans subpackages as well (SPR-5324)
* Query call chaining works with shared EntityManager proxy outside of transaction as well (SPR-6726 backport)

Package org.springframework.remoting
* fixed HTTP invoker to support resolution of multi-level primitive array classes again (SPR-5473 backport)
* added JAX-WS workaround for WebLogic 10.3 (SPR-5771 backport)

Package org.springframework.transaction
* WebSphereUowTransactionManager preserves original exception in case of rollback (SPR-5270 backport)

Package org.springframework.web
* only try to restore attribute if the value differs (ignoring Portlet spec attributes) (SPR-6712 backport)
* avoid rendering invalid ids (SPR-6840 backport)

